--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -30,6 +30,7 @@
     --green-30:rgba(16, 144, 146,0.3);
     --green-20:rgba(16, 144, 146,0.2);
     --green-10:rgba(16, 144, 146,0.1);
+    --green-5:rgba(16, 144, 146,0.05);
 
     --orange-txt:rgb(255, 255, 255);
     --orange:rgb(240, 116, 58);
