--- a/src/resources/sass/cpanel/cpanel.scss
+++ b/src/resources/sass/cpanel/cpanel.scss
@@ -99,7 +99,7 @@ body{
 
 
 @import 'pages/dashboard/home';
-@import 'pages/dashboard/activityLog';//need to finish live activitylog
+@import 'pages/dashboard/activityLog';//done
 @import 'pages/dashboard/statistics';//done
 @import 'pages/dashboard/restaurantExpenses';//done
 @import 'pages/dashboard/financialReports';//done
