--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -47,6 +47,9 @@
 .cO{color:var(--orange)}
 .cOtxt{color:var(--orange-txt)}
 .cG{color:var(--green)}
+.cG-5{color:var(--green-5)}
+.cG-40{color:var(--green-40)}
+.cG-80{color:var(--green-80)}
 .cGtxt{color:var(--green-txt)}
 .cR{color:var(--red)}
 .cRtxt{color:var(--red-txt)}
@@ -55,6 +58,8 @@
 
 .bgc_O{background-color: var(--orange);}
 .bgc_G{background-color: var(--green);}
+.bgc_G_5{background-color: var(--green-5);}
+.bgc_G_90{background-color: var(--green-90);}
 .bgc_R{background-color: var(--red);}
 .bgc_B{background-color: var(--blue);}
 
