--- a/src/resources/sass/cpanel/pages/dashboard/home.scss
+++ b/src/resources/sass/cpanel/pages/dashboard/home.scss
@@ -1,199 +1,345 @@
-
-.homeSmallCard{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    box-shadow: var(--shdw3);
-    border-radius: 3px;
+.homeRevenueCard{
+    box-shadow: var(--card-shdw);
+    padding:15px 10px;
+    margin:10px;
+    position: relative;
+    border-radius: 5px;
+    padding-inline-end:75px;
+    overflow: hidden;
     cursor: pointer;
-    margin:10px;
-    overflow: hidden;
-    transition-duration: .25s;
-    position: relative;
-    font-size: .8em;
+    width:200px;
+    color:var(--green-txt);
+    background: linear-gradient(90deg, var(--green-90) 0%, var(--green-80) 42%, var(--green-70) 100%);
+
 }
-.homeSmallCard:hover{
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 3.6px;
-    transform: scale(1.05);
-}
-.homeSmallCardIcon{
+.homeRevenueCard_icon1{
     position: absolute;
-    top: 0;
-    opacity: 0.1;
-    font-size: 15em;
-    padding-top: 0;
-    right:0;
+    opacity: .9;
+    right:10px;
+    bottom:15px;
+    transform: rotateZ(-10deg);
 }
-.homeSmallCardBody{
-    padding:7px 5px;
-    font-size:1.5em;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+.homeRevenueCard_icon2{
+    position: absolute;
+    opacity: .15;
+    right:-10px;
+    bottom:5px;
+    transform: rotateZ(-20deg);
 }
-.homeWelcomeOrderNumber{
-    font-size:3em;
-    padding:2px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.homeSmallCard2{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    box-shadow: var(--shdw3);
-    border-radius: 3px;
-    margin:10px;
-    overflow: hidden;
-    transition-duration: .25s;
-    position: relative;
-    font-size: .8em;
+.home_websiteSwitchContainer{
     min-width:200px;
-}
-.homeSmallCardIcon2{
-    position: absolute;
-    top: 0;
-    opacity: 0.05;
-    font-size: 12em;
-    padding-top: 0;
-    right:0;
-}
-.homeSmallCardBody2{
-    padding:7px 5px;
-    font-size:1.5em;
-    width: 100%;
-    display: flex;
+    margin:10px;
+    padding:20px;
+    box-shadow: var(--card-shdw);
+    border-radius: 5px;
+    background-color: var(--white-1);
+    display:flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    min-height:50px;
-}
-.homeWelcomeOrderNumber2{
-    font-size:2em;
-    padding:2px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-////////////
-#home-subAccounts{
-    overflow-y: auto;
-    max-height: 300px;
-}
-#home-deliveryAccounts{
-    overflow-y: auto;
-    max-height: 300px;
-}
-.deliveryAccountCard_live{
-    border-radius: 3px;
-    box-shadow: var(--shdw5);
-    background-color: var(--c2);
-    color:var(--c1txt);
-    display:flex;
-    flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     position: relative;
-    margin:10px 0;
-    width:calc(100% - 10px);
-    padding:5px;
+    overflow: hidden;
+
 }
-/////////////
-.homePrograssBarContainer{
-    display:flex;
-    align-items: center;
-    justify-content: flex-start;
-    width:calc(100%);
-    margin:5px 0;
-}
-.homePrograssBarIcon{
-    width:20px;
+.websiteStatusIcon{
+    margin:auto;
     height:20px;
-    font-size:1.5em;
-    margin:5px;
+    width:20px;
 }
-.homePrograssBar{
-    border-radius: 10px;
-    width:calc(100% - 60px);
-    box-shadow: inset 0 0 4px var(--placeholder);
-    height:8px;
+.home_ordersPerformanceBarContainer{
+    min-width:200px;
+    margin:10px;
+    padding:20px;
+    box-shadow: var(--card-shdw);
+    border-radius: 5px;
+    background-color: var(--white-1);
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-grow: 1;
+}
+.ordersPerformanceBar{
+    width:calc(100%);
+    margin:10px 0;
+    margin-top:5px;
+    margin-bottom:30px;
+    border-radius: 5px;
+    background-color: var(--white-3);
+    padding:6px 0;
     position: relative;
     overflow: hidden;
 }
-.homePrograssBarInside{
+.ordersPerformanceBar_fill{
     position: absolute;
-    transition-duration: 1000ms;
     top:0;
     left:0;
     height:100%;
-    width:0;
+    width:0%;
+    transition-duration: 1000ms;
+    transition-delay: 200ms;
+    transition-timing-function: ease-out;
 }
-.homePrograssBarInfo{
-    width:20px;
-    height:20px;
-    font-size:1.2em;
-    margin:5px;
+//
+.catArticleContainer{
+    margin:20px;
+    padding:20px;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: var(--white-1);
+    color:var(--txt-1);
+    box-shadow: var(--card-shdw);
+    border-radius: 4px;
+    width:250px;
+    transition-duration: 400ms;
+    overflow: hidden;
+    position: relative;
+}
+.catArticleContainer:hover{
+    text-decoration: none;
+    overflow: hidden;
+    .catArticleContainerIcon_after{transform: rotateZ(-40deg);}
+    .catArticleContainerIcon2{transform: scale(1.05);opacity:.3;}
+}
+.catArticleContainerIcon{
+    font-size: 2.5em;
+    border-radius: 50%;
+    padding:15px;
+    margin:10px;
+    width:30px;
+    height:30px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-/////////////////////
-#home-shareYourProductsContainer{
-    min-height:150px;
-    max-height: 300px;
-    padding-bottom: 10px;;
-    display:flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width:100%;
-    overflow-Y: auto;
-}
-.homeShareProduct{
-    transition-duration: 200ms;
-    width: 200px;
-    margin:10px;
-    border-radius: 3px;
-    background-color: var(--c3);
-    box-shadow: var(--shdw3);
-}
-.homeShareProduct:hover{
-    transform: scale(1.02);
-}
-//////
-.home-productsOrderedTableContainer{
-    height:200px;
-    // width:calc(100%);
-    overflow-y: auto;
-    overflow-x:hidden;
-}
-.home-productsOrderedTable{
-    // height:100px;
-    // overflow: hidden;
+    transition-duration: 250ms;
     position: relative;
+    color:var(--green);
 }
-.home-productsOrderedTable_TR{
-    font-size:1.2em;
+.catArticleContainerIcon_after{
+    position: absolute;
+    height:100%;
+    width:100%;
+    top:0;
+    left:0;
+    border-radius: 50%;;
+    border-top:2px solid var(--c5);
+    border-left:2px dashed var(--c5);
+    border-bottom:2px dotted var(--c5);
+    transition-duration: 1000ms;
+    border-right:1px dotted transparent;
 }
-.home-productsOrderedTable_TR:hover{
-    background-color: var(--c2);
+
+.catArticleContainerIcon2{
+    opacity:0;
+    position: absolute;
+    top:-3px;
+    left:3px;
+    padding:15px;
+    width:30px;
+    height:30px;
+    transition-duration: 800ms;
+    opacity:.1;
+    transform-origin: bottom left ;
+    transition-timing-function: ease-in-out;
 }
-////////
-.home-productsNotOrderedContainer{
-    display:flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    // width:100%;
-    height:200px;
-    overflow-Y: auto;
-}
+
+// .homeSmallCard{
+//     display:flex;
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+//     align-items: center;
+//     justify-content: flex-start;
+//     box-shadow: var(--shdw3);
+//     border-radius: 3px;
+//     cursor: pointer;
+//     margin:10px;
+//     overflow: hidden;
+//     transition-duration: .25s;
+//     position: relative;
+//     font-size: .8em;
+// }
+// .homeSmallCard:hover{
+//     box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 3.6px;
+//     transform: scale(1.05);
+// }
+// .homeSmallCardIcon{
+//     position: absolute;
+//     top: 0;
+//     opacity: 0.1;
+//     font-size: 15em;
+//     padding-top: 0;
+//     right:0;
+// }
+// .homeSmallCardBody{
+//     padding:7px 5px;
+//     font-size:1.5em;
+//     width: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     justify-content: center;
+// }
+// .homeWelcomeOrderNumber{
+//     font-size:3em;
+//     padding:2px;
+//     display:flex;
+//     align-items: center;
+//     justify-content: center;
+// }
+
+
+// .homeSmallCard2{
+//     display:flex;
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+//     align-items: center;
+//     justify-content: flex-start;
+//     box-shadow: var(--shdw3);
+//     border-radius: 3px;
+//     margin:10px;
+//     overflow: hidden;
+//     transition-duration: .25s;
+//     position: relative;
+//     font-size: .8em;
+//     min-width:200px;
+// }
+// .homeSmallCardIcon2{
+//     position: absolute;
+//     top: 0;
+//     opacity: 0.05;
+//     font-size: 12em;
+//     padding-top: 0;
+//     right:0;
+// }
+// .homeSmallCardBody2{
+//     padding:7px 5px;
+//     font-size:1.5em;
+//     width: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     justify-content: center;
+//     min-height:50px;
+// }
+// .homeWelcomeOrderNumber2{
+//     font-size:2em;
+//     padding:2px;
+//     display:flex;
+//     align-items: center;
+//     justify-content: center;
+// }
+// ////////////
+// #home-subAccounts{
+//     overflow-y: auto;
+//     max-height: 300px;
+// }
+// #home-deliveryAccounts{
+//     overflow-y: auto;
+//     max-height: 300px;
+// }
+// .deliveryAccountCard_live{
+//     border-radius: 3px;
+//     box-shadow: var(--shdw5);
+//     background-color: var(--c2);
+//     color:var(--c1txt);
+//     display:flex;
+//     flex-direction: row;
+//     align-items: center;
+//     justify-content: flex-start;
+//     position: relative;
+//     margin:10px 0;
+//     width:calc(100% - 10px);
+//     padding:5px;
+// }
+// /////////////
+// .homePrograssBarContainer{
+//     display:flex;
+//     align-items: center;
+//     justify-content: flex-start;
+//     width:calc(100%);
+//     margin:5px 0;
+// }
+// .homePrograssBarIcon{
+//     width:20px;
+//     height:20px;
+//     font-size:1.5em;
+//     margin:5px;
+// }
+// .homePrograssBar{
+//     border-radius: 10px;
+//     width:calc(100% - 60px);
+//     box-shadow: inset 0 0 4px var(--placeholder);
+//     height:8px;
+//     position: relative;
+//     overflow: hidden;
+// }
+// .homePrograssBarInside{
+//     position: absolute;
+//     transition-duration: 1000ms;
+//     top:0;
+//     left:0;
+//     height:100%;
+//     width:0;
+// }
+// .homePrograssBarInfo{
+//     width:20px;
+//     height:20px;
+//     font-size:1.2em;
+//     margin:5px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
+// /////////////////////
+// #home-shareYourProductsContainer{
+//     min-height:150px;
+//     max-height: 300px;
+//     padding-bottom: 10px;;
+//     display:flex;
+//     flex-wrap: wrap;
+//     align-items: center;
+//     justify-content: center;
+//     width:100%;
+//     overflow-Y: auto;
+// }
+// .homeShareProduct{
+//     transition-duration: 200ms;
+//     width: 200px;
+//     margin:10px;
+//     border-radius: 3px;
+//     background-color: var(--c3);
+//     box-shadow: var(--shdw3);
+// }
+// .homeShareProduct:hover{
+//     transform: scale(1.02);
+// }
+// //////
+// .home-productsOrderedTableContainer{
+//     height:200px;
+//     // width:calc(100%);
+//     overflow-y: auto;
+//     overflow-x:hidden;
+// }
+// .home-productsOrderedTable{
+//     // height:100px;
+//     // overflow: hidden;
+//     position: relative;
+// }
+// .home-productsOrderedTable_TR{
+//     font-size:1.2em;
+// }
+// .home-productsOrderedTable_TR:hover{
+//     background-color: var(--c2);
+// }
+// ////////
+// .home-productsNotOrderedContainer{
+//     display:flex;
+//     flex-wrap: wrap;
+//     align-items: center;
+//     justify-content: center;
+//     // width:100%;
+//     height:200px;
+//     overflow-Y: auto;
+// }
