--- a/src/resources/sass/cpanel/pages/dashboard/home.scss
+++ b/src/resources/sass/cpanel/pages/dashboard/home.scss
@@ -124,9 +124,9 @@
     top:0;
     left:0;
     border-radius: 50%;;
-    border-top:2px solid var(--c5);
-    border-left:2px dashed var(--c5);
-    border-bottom:2px dotted var(--c5);
+    border-top:2px solid var(--green);
+    border-left:2px dashed var(--green);
+    border-bottom:2px dotted var(--green);
     transition-duration: 1000ms;
     border-right:1px dotted transparent;
 }
