--- a/src/resources/sass/foodmenu/foodmenu.scss
+++ b/src/resources/sass/foodmenu/foodmenu.scss
@@ -121,4 +121,4 @@ a:hover{
 }
 .checkboxlabel_disabled{cursor: not-allowed;}
 @import './register.scss';
-// @import '../cpanel/styleClasses.scss';
+@import '../styleClasses.scss';
