--- a/src/resources/sass/help/tools/search.scss
+++ b/src/resources/sass/help/tools/search.scss
@@ -14,8 +14,8 @@
     padding:7px 10px;
     border-radius: 5px;
     width:calc(100% - 20px);
-    color:var(--placeholder2);
+    color:var(--txt-1);
 }
 .searchElem:hover{
-    background-color: var(--c2);
+    background-color: var(--white-2);
 }
