--- a/src/resources/sass/help/tools/search/headerSearch.scss
+++ b/src/resources/sass/help/tools/search/headerSearch.scss
@@ -7,13 +7,11 @@
 .headerSearchResultsContainer{
     position: absolute;
     top:-5px;
-    // left:-5px;
-    // right:-5px;
     padding-top:45px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 5px;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     z-index: 1;
     transition-duration: 100ms;
     opacity: 1;
@@ -22,7 +20,7 @@
     width:calc(100% + 10px);
 }
 .headerSearchResults{
-    border-top:1px dashed var(--inptbr);
+    border-top:1px dashed var(--white-4);
     width:calc(100% - 10px);
     max-height: calc(400px - 11px);
     overflow-y: auto;
@@ -45,8 +43,8 @@
     outline:none;
     height:25px;
     border:none;
-    border-top:1px solid var(--inptbr);
-    border-bottom:1px solid var(--inptbr);
+    border-top:1px solid var(--white-5);
+    border-bottom:1px solid var(--white-5);
     width:100%;
     padding:5px 0;
     font-size: 1em;
@@ -55,10 +53,10 @@
     z-index: 5;
     max-width:500px;
 }
-.headerSearch::placeholder{color:var(--placeholder)}
+.headerSearch::placeholder{color:var(--white-10)}
 .headerSearchLeft{
     border-radius: 5px 0 0 5px;
-    border:1px solid var(--inptbr);
+    border:1px solid var(--white-5);
     border-right:none;
     height:25px;
     width:25px;
@@ -66,24 +64,24 @@
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     z-index: 5;
 }
 .headerSearchRight{
     border-radius:0 5px 5px 0;
-    border:1px solid var(--inptbr);
+    border:1px solid var(--white-5);
     border-left:none;
     height:25px;
     padding:5px;
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     z-index: 5;
 }
 ///
 .headerOpenSearchBtn{
-    background-color: var(--c3);
+    background-color: var(--white-1);
     box-shadow: rgba(50, 50, 93, 0.15) 0px 0px 1px 1px;
     width:25px;
     height:25px;
@@ -96,7 +94,7 @@
     font-weight: bold;
 }
 .headerCloseSearchBtn{
-    background-color: var(--c3);
+    background-color: var(--white-1);
     box-shadow: rgba(50, 50, 93, 0.15) 0px 0px 1px 1px;
     width:25px;
     height:25px;
