--- a/src/resources/sass/help/pages/home.scss
+++ b/src/resources/sass/help/pages/home.scss
@@ -19,7 +19,6 @@
     align-items: flex-end;
     justify-content: center;
     padding:40px;
-    // z-index: 2;
 }
 .homeIntro:before{
     content: '';
@@ -33,7 +32,7 @@
 }
 .homeIntroTxt{
     font-size:3em;
-    color:var(--c2);
+    color:var(--txt-2);
     font-weight: bold;
     z-index: 5;
     font-family: 'inter', sans-serif;
@@ -69,8 +68,8 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    background-color: var(--c1);
-    color:var(--c5);
+    background-color: var(--white-1);
+    color:var(--green);
     box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 3px 0px;
     border-radius: 4px;
     width:250px;
@@ -85,7 +84,7 @@
     left:0;
     width:100%;
     height:100%;
-    background-color: var(--c1);
+    background-color: var(--white-2);
     z-index: -1;
 }
 .homeCatContainer:hover{
@@ -117,7 +116,6 @@
     justify-content: center;
     transition-duration: 400ms;
     position: relative;
-    // color:var(--c4);
 }
 .homeCatContainerIcon_after{
     content:'';
@@ -127,11 +125,11 @@
     top:0;
     left:0;
     border-radius: 50%;;
-    border-top:2px solid var(--c5);
-    border-left:2px dashed var(--c5);
-    border-bottom:2px dotted var(--c5);
+    border-top:2px solid var(--green);
+    border-left:2px dashed var(--green);
+    border-bottom:2px dotted var(--green);
     transition-duration: 1000ms;
-    border-right:1px dotted var(--c5);
+    border-right:1px dotted var(--green);
 }
 
 .homeCatContainerIcon2{
@@ -144,7 +142,6 @@
     height:30px;
     transition-duration: 800ms;
     opacity:.1;
-    // transform: scale(1.1);
     transform-origin: bottom left ;
 }
 .homeBotSectionContainer{
@@ -177,5 +174,5 @@
     color:var(--c1txt);
 }
 .homeArticleCard:hover{
-    background-color: var(--c2);
+    background-color: var(--white-2);
 }
