--- a/src/resources/sass/help/tools/footer.scss
+++ b/src/resources/sass/help/tools/footer.scss
@@ -5,7 +5,7 @@ footer{
     margin-right:auto;
     padding-top:40px;
     max-width: 1000px;
-    border-top:1px solid #9d9d9d6a;
+    border-top:1px solid var(--white-3);
     opacity:0;
     transition-duration: 200ms;
 }
