--- a/src/resources/sass/help/tools/header.scss
+++ b/src/resources/sass/help/tools/header.scss
@@ -27,46 +27,46 @@ header{
     align-items: center;
     justify-content: center;
 }
-.headerTitle span:nth-child(1){color:#128b8d}
-.headerTitle span:nth-child(1){color:var(--c4txt)}
-.headerTitle span:nth-child(2){color:var(--c4txt)}
+.headerTitle span:nth-child(1){color:var(--green)}
+.headerTitle span:nth-child(1){color:var(--txt-2)}
+.headerTitle span:nth-child(2){color:var(--txt-2)}
 .header_notHome{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     .headerSearchContainer{
         @media (max-width:1024px) {
             display: none;
         }
         display:flex;
     }
-    .headerTitle span:nth-child(1){color:var(--c4)}
-    .headerTitle span:nth-child(2){color:var(--c1txt)}
-    .loginBtn{background-color: var(--c3);color:var(--c1txt);}
-    .loginBtn:hover{color:var(--c1txt)}
-    .headerElem{color:var(--c1txt);}
-    .headerElem:hover{color:var(--c4);}
+    .headerTitle span:nth-child(1){color:var(--white-1)}
+    .headerTitle span:nth-child(2){color:var(--txt-1)}
+    .loginBtn{background-color: var(--white-3);color:var(--txt-1);}
+    .loginBtn:hover{color:var(--txt-1)}
+    .headerElem{color:var(--txt-1);}
+    .headerElem:hover{color:var(--green);}
     .homeSearchContainer{display:none;}
-    .headMobileNavIcon{color:var(--c1txt);}
+    .headMobileNavIcon{color:var(--txt-1);}
     .homeSearchResultsContainer{display:none;}
     .headerTitle_f{content:url("/storage/logo/f_green.png");}
 }
 .header_shadow{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     .headerSearchContainer{
         @media (max-width:1024px) {
             display: none;
         }
         display:flex;
     }
-    .headerTitle span:nth-child(1){color:var(--c4)}
-    .headerTitle span:nth-child(2){color:var(--c1txt)}
-    .loginBtn{background-color: var(--c3);color:var(--c1txt);}
-    .loginBtn:hover{color:var(--c1txt)}
-    .headerElem{color:var(--c1txt);}
-    .headerElem:hover{color:var(--c4);}
+    .headerTitle span:nth-child(1){color:var(--white-1)}
+    .headerTitle span:nth-child(2){color:var(--txt-1)}
+    .loginBtn{background-color: var(--white-3);color:var(--txt-1);}
+    .loginBtn:hover{color:var(--txt-1)}
+    .headerElem{color:var(--txt-1);}
+    .headerElem:hover{color:var(--green);}
     .homeSearchContainer{display:none;}
-    .headMobileNavIcon{color:var(--c1txt);}
+    .headMobileNavIcon{color:var(--txt-1);}
     .homeSearchResultsContainer{display:none;}
     .headerTitle_f{content:url("/storage/logo/f_green.png");}
 }
@@ -77,7 +77,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    color:var(--c4txt);
+    color:var(--txt-2);
     padding:6px 15px;
     border-radius: 20px;
     font-weight: bold;
@@ -87,7 +87,7 @@ header{
     span:nth-child(2){
         transform: translateX(2px);
     }
-    color:var(--c4txt);
+    color:var(--txt-2);
 }
 .loginBtn span:nth-child(2){font-size:.8em;margin-inline-start:2px;transition-duration: 200ms;}
 
@@ -98,11 +98,11 @@ header{
     font-weight: bold;
     margin:0 10px;
     cursor: pointer;
-    color:var(--c4txt);
+    color:var(--txt-2);
 }
 .headerElem:hover{
     text-decoration: none;
-    color:var(--c4txt);
+    color:var(--txt-1);
 }
 
 .headerLinksContainer{
@@ -118,7 +118,7 @@ header{
     display:none;
     cursor: pointer;
     font-size: 1.5em;
-    color:var(--c4txt);
+    color:var(--txt-2);
     @media (max-width:1024px) {
         display:flex;
     }
@@ -126,7 +126,7 @@ header{
 .MobileNavIconClose{
     cursor: pointer;
     font-size: 1.3em;
-    color:var(--c1txt);
+    color:var(--txt-1);
     @media (max-width:1024px) {
         display:flex;
     }
