--- a/src/resources/sass/help/tools/search/homeSearch.scss
+++ b/src/resources/sass/help/tools/search/homeSearch.scss
@@ -8,7 +8,6 @@
         display: none;
     }
     position: relative;
-    // z-index: 3;
 }
 .homeSearchResultsContainer{
     position: fixed;
@@ -21,7 +20,7 @@
 }
 .homeSearchResults{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-top:1px dashed var(--inptbr);
+    border-top:1px dashed var(--white-10);
     margin-top:40px;
     max-height: 300px;
     min-height:150px;
@@ -32,7 +31,7 @@
     transition-duration: 150ms;
     opacity: 1;
     border-radius: 0  0 5px 5px;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     font-size: .8em;
 }
 .homeSearchResultsContainer_hidden{
@@ -41,13 +40,13 @@
     max-height:0px;
 }
 .homeSearchContainer_focus{
-    .homeSearchLeft{border:1px solid transparent;border-right:none;border-bottom:1px dashed var(--inptbr);border-radius: 5px 0 0 0;}
-    .homeSearchRight{border:1px solid transparent;border-left:none;border-bottom:1px dashed var(--inptbr);border-radius:0 5px 0 0;}
-    .homeSearch{border-top:1px solid transparent;border-bottom:1px solid transparent;border-bottom:1px dashed var(--inptbr);}
+    .homeSearchLeft{border:1px solid transparent;border-right:none;border-bottom:1px dashed var(--white-10);border-radius: 5px 0 0 0;}
+    .homeSearchRight{border:1px solid transparent;border-left:none;border-bottom:1px dashed var(--white-10);border-radius:0 5px 0 0;}
+    .homeSearch{border-top:1px solid transparent;border-bottom:1px solid transparent;border-bottom:1px dashed var(--white-10);}
 }
 .homeSearchLeft{
     border-radius: 5px 0 0 5px;
-    border:1px solid var(--inptbr);
+    border:1px solid var(--white-10);
     border-right:none;
     height:35px;
     width:35px;
@@ -56,37 +55,34 @@
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--c1);
-    // z-index: 3;
+    background-color: var(--white-1);
 }
 .homeSearchRight{
     border-radius:0 5px 5px 0;
-    border:1px solid var(--inptbr);
+    border:1px solid var(--white-10);
     border-left:none;
     height:35px;
     padding:5px;
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--c1);
-    // z-index: 3;
+    background-color: var(--white-1);
 }
 .homeSearch{
     outline:none;
     height:35px;
     border:none;
-    border-top:1px solid var(--inptbr);
-    border-bottom:1px solid var(--inptbr);
+    border-top:1px solid var(--white-10);
+    border-bottom:1px solid var(--white-10);
     width:100%;
     padding:5px 0;
     font-size: 1em;
     font-family: 'Nunito', sans-serif;
-    color:var(--c1txt);
-    // z-index: 3;
+    color:var(--txt-1);
 }
-.homeSearch::placeholder{color:var(--placeholder)}
+.homeSearch::placeholder{color:var(--white-10)}
 .homeOpenSearchBtn{
-    background-color: var(--c3);
+    background-color: var(--white-1);
     box-shadow: rgba(50, 50, 93, 0.15) 0px 0px 1px 1px;
     width:25px;
     height:25px;
@@ -99,7 +95,7 @@
     font-weight: bold;
 }
 .homeCloseSearchBtn{
-    background-color: var(--c3);
+    background-color: var(--white-1);
     box-shadow: rgba(50, 50, 93, 0.15) 0px 0px 1px 1px;
     width:25px;
     height:25px;
