--- a/src/resources/sass/cpanel/pages/dashboard/statistics.scss
+++ b/src/resources/sass/cpanel/pages/dashboard/statistics.scss
@@ -95,7 +95,7 @@ text{fill:var(--txt-1)}
     box-shadow: var(--card-shdw);
     background-color: var(--white-1);
     font-size: .9em;
-    color:rgba(0, 0, 0, 0.2)
+    // color:rgba(0, 0, 0, 0.2)
 }
 .statistics_overview_graphs_container{
     width:100%;
