--- a/src/resources/sass/billing/billing.scss
+++ b/src/resources/sass/billing/billing.scss
@@ -357,5 +357,6 @@ a:hover{
     vertical-align: top;
 }
 .hvr-cBlack:hover{color:#282828}
-// @import '../cpanel/styleClasses.scss';
 .pX5-720{@media (max-width:720px) {padding:5px;}}
+
+@import '../style/style.scss';
