--- a/src/resources/sass/style/font.scss
+++ b/src/resources/sass/style/font.scss
@@ -10,6 +10,7 @@
 .lThrough{text-decoration: line-through;}
 .tdNone{text-decoration: none !important;}
 .hvr-tdNone:hover{text-decoration: none;}
+.hvr-underline:hover{text-decoration: underline;}
 
 .fs01{font-size:0.1em}
 .fs01-400{@media (max-width:400px){font-size:0.1em}}
