--- a/src/resources/sass/billing/invoice.scss
+++ b/src/resources/sass/billing/invoice.scss
@@ -17,17 +17,17 @@ td{
     display:table-cell;
     width:calc(50%);
     border:none;
-    padding:3px 0px;
+    padding:5px 0px;
     vertical-align: start;
 }
 
-// @import '../cpanel/styleClasses.scss';
+@import '../style/style.scss';
 .taS{text-align: left;}
 .taE{text-align: right;}
 .pL10{padding-left:10px;}
 .pR10{padding-right:10px;}
 .pL20{padding-left:20px;}
 .pR20{padding-right:20px;}
-.pY10{padding-top:10px;padding-bottom:10px;}
-.brdrT1{border-top:.1px solid #c1c1c1}
-.brdrB1{border-bottom:.1px solid #c1c1c1}
+// .pY10{padding-top:10px;padding-bottom:10px;}
+.brdrT1{border-top:.1px solid #ececec}
+.brdrB1{border-bottom:.1px solid #ececec}
