--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -29,6 +29,8 @@
 .c_white-9{color:var(--white-9)}
 .c_white-10{color:var(--white-10)}
 
+.hvr_c_txt1:hover{color:var(--txt-1)}
+
 .bgc_white-1{background-color:var(--white-1)}
 .bgc_white-2{background-color:var(--white-2)}
 .bgc_white-3{background-color:var(--white-3)}
