--- a/src/resources/sass/cpanel/pages/dashboard/statistics.scss
+++ b/src/resources/sass/cpanel/pages/dashboard/statistics.scss
@@ -7,6 +7,7 @@
     padding-inline-end: 20px;
     width:calc(100% - 20px);
     background-color: var(--white-1);
+    white-space: nowrap;
 }
 .statisticspopupRow_left2{
     height:15px;
@@ -17,6 +18,7 @@
     padding-inline-end: 20px;
     width:calc(100% - 20px);
     background-color: var(--white-2);
+    white-space: nowrap;
 }
 .statisticspopupRow_right1{
     height:15px;
@@ -26,6 +28,7 @@
     padding: 5px;
     width:calc(100% - 10px);
     background-color: var(--white-1);
+    white-space: nowrap;
 }
 .statisticspopupRow_right2{
     height:15px;
@@ -35,6 +38,7 @@
     padding: 5px;
     width:calc(100% - 10px);
     background-color: var(--white-2);
+    white-space: nowrap;
 }
 ////
 .statisticsDonutStroke{
