--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -15,6 +15,7 @@
     --white-8:rgb(110, 110, 110);
     --white-9:rgb(120, 120, 120);
     --white-10:rgb(130, 130, 130);
+    --white-11:rgb(151, 151, 151);
 
     --txt-1:rgb(200, 200, 200);
     --txt-2:rgb(255, 255, 255);
