--- a/src/resources/sass/help/tools/search/mobileNavSearch.scss
+++ b/src/resources/sass/help/tools/search/mobileNavSearch.scss
@@ -21,6 +21,7 @@
     width:calc(100% - 10px);
     height:calc(100% - 45px);
     overscroll-behavior:contain;
+    font-size: .9em;
 }
 .mobileNavSearchResultsContainer_hidden{
     opacity: .5;
