--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -28,6 +28,7 @@
 .c_white-8{color:var(--white-8)}
 .c_white-9{color:var(--white-9)}
 .c_white-10{color:var(--white-10)}
+.c_white-11{color:var(--white-11)}
 
 .hvr_c_txt1:hover{color:var(--txt-1)}
 
@@ -41,6 +42,7 @@
 .bgc_white-8{background-color:var(--white-8)}
 .bgc_white-9{background-color:var(--white-9)}
 .bgc_white-10{background-color:var(--white-10)}
+.bgc_white-11{background-color:var(--white-11)}
 
 
 .c_txt1{color:var(--txt-1)}
