--- a/src/resources/sass/help/tools/search.scss
+++ b/src/resources/sass/help/tools/search.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding:7px 10px;
+    padding:10px;
     border-radius: 5px;
     width:calc(100% - 20px);
     color:var(--txt-1);
