--- a/src/resources/sass/deliveryAccount/login.scss
+++ b/src/resources/sass/deliveryAccount/login.scss
@@ -1,79 +1,126 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url('/storage/fonts2/en/Roboto.ttf') format("truetype");
-}
 
+@font-face {
+    font-family: 'Nunito';
+    src: url('/storage/fonts/en/Nunito.ttf') format("truetype");
+}
+@font-face {
+    font-family: 'inter';
+    src: url('/storage/fonts/en/inter.ttf') format("truetype");
+}
 @font-face {
     font-family: 'Tajawal';
-    src: url('/storage/fonts2/ar/Tajawal.ttf') format("truetype");
+    src: url('/storage/fonts/ar/Tajawal.ttf') format("truetype");
 }
-
-@import '../cpanel/tools/icons';
 @import '../cpanel/tools/loading';
 @import '../cpanel/tools/scrollBar';
 @import '../cpanel/form/button.scss';
 @import '../cpanel/form/input-text.scss';
 
-html{height:100%;width:100%;}
-
+html{
+    margin: 0;
+    padding:0;
+    height: 100%;
+    width:100%;
+    overflow: hidden;
+}
 body{
+    font-family: 'Nunito','inter','Tajawal', sans-serif;
+    overscroll-behavior-y: contain;
+    margin: 0;
+    padding:0;
     user-select: none;
-    background-color: var(--c1);
-    color:var(--c1txt);
-    font-family: 'Roboto','Tajawal', sans-serif;
+    height:100%;
+    width:100%;
+    overflow: hidden;
+    color: var(--txt-1);
+    background-color: var(--white);
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 0em;
     padding: 0em;
-    height:100%;
-    @media (max-width:1023px) {
-        font-size:.8em;
-    }
     overflow-y: auto;
     overflow-x: hidden;
 }
-#loginFormContainer {
+.loginFormContainerC{
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    width:30%;
+    min-width: 500px;
+    @media (max-width:1024px) {
+        min-width: 400px;
+    }
+    @media (max-width:720px) {
+        width:100%;
+        min-width: 100%;
+        justify-content: center;
+    }
+}
+.loginFormContainer{
+    height:500px;
+    width:500px;
+    max-width:clac(100px - 40px);
+    max-height: 80%;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin:0;
-    padding: 40px 20px;
-    overflow: auto;
-    transition-duration: 300ms;
+    justify-content: center;
+    margin:20px;
+    background-color: var(--white);
+    border-radius: 5px;
+    box-shadow: 0 0 10px var(--shdw-5), 0 0 20px 0px var(--shdw-5);
+}
+.foodMenuLogo{
+    margin:20px 10px;
+    margin-top: 0;
+    padding:5px;
+    height:80px;
+    box-shadow: 0 0 10px var(--shdw-5), 0 0 1px 0px var(--shdw-20);
+    border-radius: 50%;
 }
 a {
     text-decoration: none;
     cursor: pointer;
-    color: var(--c4);
+    color: var(--green);
 }
 a:hover{
     text-decoration: underline;
 }
-.inputText{
-    @media (max-width:500px) {
-        width:170px;
+.inputText {
+    @media (max-width:720px) {
+        width:180px
     }
 }
-// .btn{
-//     padding: 10px 30px;
-//     font-size:1.4em;
-// }
+.btn{
+    padding: 5px 0px;
+    margin:0px;
+    width:calc(100%);
+    @media (max-width:720px) {
+        width:180px
+    }
+}
 .formContainer {
     max-width:500px;
-    background-color: var(--c1);
+    background-color: var(--white);
     border-radius: 3px;
     box-shadow: var(--shdw4);
-    color: var(--placeholder2);
+    color: var(--white-10);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: fit-content;
-    padding: 20px 30px;
-    transition-duration: .4s;
+    padding: 20px;
+    transition-duration: 400ms;
     margin:0 ;
+    max-width:calc(100% - 40px)
 }
-// @import '../cpanel/styleClasses.scss';
+@import '../cpanel/tools/icons';
+@import '../style/style.scss';
